# cdp_minimal

./: .gitignore  CMakeLists.txt  Makefile  README.md  vcpkg.json
examples/: audioCapture.cpp  clipboardModifications.cpp  cookietheft.cpp  inputCapture.cpp  monitorURLs.cpp  webcamPhoto.capp
include/cdp/: browser.h  cookie.h  error.h  input_event.h  page.h  result.h
src/cdp/: browser.cpp  cookie.cpp  main.cpp  page.cpp  result.cpp
src/detail/: base64.h  channel.cpp  channel.h  connection.cpp  connection.h  http.h  json.hpp  sha1.h
